--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "react-icons": "^4.7.1"
+        "react-icons": "^4.7.1",
+        "react-phone-input-2": "^2.15.1"
     }
 }
